# Flask-blog

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  dockerfile  models.py  pyproject.toml  requirements.txt  run.py  setup.sh
.github/workflows/: sync_to_HF_hub.yml
flaskblog/: __init__.py  appForms.py  config.py  models.py  routes.py
flaskblog/errors/: handlers.py
flaskblog/main/: routes.py
flaskblog/posts/: forms.py  routes.py
flaskblog/static/: main.css
flaskblog/templates/: about.html  account.html  base.html  create_post.html  create_update_post.html  home.html  login.html  macros.html  post.html  request_reset.html  reset_password.html  signup.html  user_profile.html
flaskblog/templates/errors/: 403.html  404.html  500.html
flaskblog/users/: routes.py  utils.py
src/: run.py
src/flaskblog/: __init__.py  config.py
src/flaskblog/admin/: routes.py
src/flaskblog/main/: routes.py
src/flaskblog/posts/: routes.py
src/flaskblog/templates/: account.html  admin.html  create_update_post.html  login.html  post.html  request_reset.html  reset_password.html
src/flaskblog/templates/errors/: 403.html  404.html  500.html
src/flaskblog/users/: forms.py  routes.py  utils.py
templates/: about.html  base.html  home.html  login.html  signup.html
