[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flaskblog"
version = "0.1.0"
description = "A blog website created using Flask"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Soumya Prabha Maiti", email = "soumyaprabhamaiti2001@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
    "email-validator==2.0.0.post2",
    "Flask==3.1.3",
    "Flask-Bcrypt==1.0.1",
    "Flask-Login==0.6.3",
    "Flask-Mail==0.10.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-WTF==1.3.0",
    "gunicorn==21.2.0",
    "Pillow==12.2.0",
    "PyJWT==2.8.0",
    "python-dotenv==1.0.0",
    "Markdown==3.7",
]

[project.urls]
Source = "https://github.com/soumya-prabha-maiti/Flask-blog"
Issues = "https://github.com/soumya-prabha-maiti/Flask-blog/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/flaskblog"]
